Email send verificate and reset password

--- a/.env
+++ b/.env
@@ -4,5 +4,11 @@ DATABASE_USERNAME=user
 DATABASE_PASSWORD=password
 DATABASE_NAME=astrus
 DATABASE_SYNC=true
+
 JWT_SECRET=43242dd_wswwa2Dr92imcdcs$2__22s2dK
 JWT_EXPIRES_IN=7d
+
+EMAIL_ADMIN=astrus.project@gmail.com
+EMAIL_PASSWORD=imzelqkcppenwxtm
+
+EMAIL_REAL_PASSWORD=astrus@PU
