Improving email sender

--- a/.env
+++ b/.env
@@ -10,5 +10,7 @@ JWT_EXPIRES_IN=7d
 
 EMAIL_ADMIN=astrus.project@gmail.com
 EMAIL_PASSWORD=imzelqkcppenwxtm
-
 EMAIL_REAL_PASSWORD=astrus@PU
+
+EMAIL_EXPIRES_TIMEOUT=3600000 # 1 hour (in milliseconds)
+EMAIL_RESEND_INTERVAL=90000 # 1 minute 30 seconds (in milliseconds)
